[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/RAVIE.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://assets/background.png" type="Texture" id=2]
[ext_resource path="res://assets/sound/fail.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/icons/speaker.png" type="Texture" id=4]
[ext_resource path="res://assets/sound/success.ogg" type="AudioStream" id=5]
[ext_resource path="res://artiphonie/listenchoose/listenChoose.gd" type="Script" id=6]
[ext_resource path="res://assets/theme/PhoneticTheme.tres" type="Theme" id=7]
[ext_resource path="res://assets/icons/back.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 54
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Good" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Wrong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="MainPage" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="MainPage"]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MainPage/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainPage/Control/MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="marginPlate" type="MarginContainer" parent="MainPage/Control/MarginContainer/VBoxContainer"]
margin_right = 1024.0

[node name="plate" type="HBoxContainer" parent="MainPage/Control/MarginContainer/VBoxContainer/marginPlate"]
margin_right = 1024.0
size_flags_horizontal = 3

[node name="speak" type="TextureButton" parent="MainPage/Control"]
anchor_left = 0.466959
anchor_top = 0.856652
anchor_right = 0.535319
anchor_bottom = 0.973319
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Validate" type="Label" parent="MainPage/Control"]
anchor_left = 0.211103
anchor_top = 0.0408944
anchor_right = 0.824384
anchor_bottom = 0.132561
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.843137, 0.411765, 0.211765, 1 )
text = "Ecoute et Choisis"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Back" type="Button" parent="."]
anchor_left = 0.015625
anchor_top = 0.0266667
anchor_right = 0.0986328
anchor_bottom = 0.168333
icon = ExtResource( 8 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="pressed" from="MainPage/Control/speak" to="." method="_on_speak_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
